adicoa tarefa 15-projeto

--- a/02 - CSS/07 - Unidades de Medida/curriculo.css
+++ b/02 - CSS/07 - Unidades de Medida/curriculo.css
@@ -48,7 +48,7 @@ nav ul {
 .flex-container {
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   gap: 1em;
 }
